# python_project_template

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINER_NOTES.md  Makefile  PROJECT_TODO.md  README.md  TEMPLATE_TODO.md  pyproject.toml  ruff.toml
.github/workflows/: docs-build.yml  lint-test.yml  release.yml
docs/: index.md  mkdocs.yml  usage.md
python_project_template/: __init__.py
src/python_project_template/: __init__.py  config.py  logging.py  main.py
src/python_project_template/ralph/: __init__.py  config.py  engine.py  models.py  prompt_templates.py  provider.py
src/python_project_template/ui/: __init__.py
src/python_project_template/utils/: __init__.py  basic_ops.py
tests/: fakes.py  test_basic_ops.py  test_cli.py  test_config.py  test_engine.py  test_provider.py
